--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,4 @@ project(ASD-Labos-2021)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wconversion -Wsign-conversion -pedantic")
 
-add_executable(L3-demo main_somebits_demo.cpp)
+add_executable(L3-demo main_somebits_demo.cpp tri_par_base.cpp tri_rapide.cpp tri_rapide.cpp tri_par_base.h tri_rapide.h)
